# typst-business-templates

./: .gitguardian.yaml  .gitignore  BUG_INVOICE_FOOTER.md  BUG_LOGO_PATH_INCONSISTENT.md  CHANGELOG.md  CONCEPT.md  DOCUMENT-TYPES.md  LICENSE  README.md  install.sh  lib.typ  typst.toml
.claude/: RELEASE-PROCESS.md
.github/workflows/: release.yml
Formula/: docgen.rb
cli/: Cargo.toml
cli/.docgen/templates/common/: din5008-address.typ  styles.typ
cli/.docgen/templates/credentials/: default.typ.backup
cli/.docgen/templates/documentation/: default.typ
cli/.docgen/templates/invoice/: default.typ
cli/.docgen/templates/order-confirmation/: default.typ
cli/.docgen/templates/sla/: default.typ
cli/.docgen/templates/task-list/: default.typ
cli/locales/: de.json  it.json  pt.json
cli/src/: embedded.rs  encrypt.rs  local_templates.rs  locale.rs  main.rs  packages.rs
cli/src/commands/: client.rs  mod.rs  project.rs  template.rs
cli/src/data/: mod.rs  models.rs
cli/src/db/: mod.rs  models.rs
cli/src/ui/: mod.rs
cli/templates/: concept.json  credentials.json  invoice.json  offer.json  task-list.json
cli/tests/integration/: client_tests.rs  main.rs  project_tests.rs
data/: company.json
docs/: DATABASE.md  PROJECT.md  REVIEW-2026-01.md  ROADMAP.md  SIMPLIFICATION-PLAN.md
examples/: README.md
examples/data/: company.json  concept-content.typ  concept-example.json  credentials-example.json  documentation-content.typ  documentation-example.json  invoice-example.json  offer-example.json
examples/digitalagentur/: .gitignore  README.md
examples/freelance-designer/: README.md
examples/it-consultant/: README.md
fonts/: README.md
fonts/Lato/: LICENSE.txt
fonts/Raleway/: LICENSE.txt
fonts/Roboto Mono/: LICENSE.txt
locale/: de.json  en.json  es.json  fr.json  it.json  nl.json  pt.json
releases/v0.4.6/: docgen
releases/v0.4.7/: docgen
schema/: credentials.schema.json  invoice.schema.json
templates/common/: locale-helpers.typ  styles.typ  title-page.typ  totals-summary.typ  unit-formatter.typ
templates/concept/: default.typ
(+81 files in other folders)
