[package]
name = "docgen"
version = "0.1.0"
edition = "2021"
description = "CLI tool for generating business documents with Typst templates"
license = "MIT"
repository = "https://github.com/casoon/typst-business-templates"
keywords = ["typst", "documents", "invoice", "pdf", "cli"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.17"
notify = "6.1"
colored = "2.1"
walkdir = "2.4"
anyhow = "1.0"
