[package]
name = "docgen"
version = "0.4.3"
edition = "2021"
description = "CLI tool for generating business documents with Typst templates"
license = "MIT"
repository = "https://github.com/casoon/typst-business-templates"
keywords = ["typst", "documents", "invoice", "pdf", "cli"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
colored = "2.1"
walkdir = "2.4"
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
dialoguer = "0.11"
console = "0.15"
chrono = "0.4"
comfy-table = "7.1"
lopdf = "0.39"
dirs = "5.0"
