[package]
name = "docgen"
version = "0.5.2"
edition = "2021"
description = "CLI tool for generating business documents with Typst templates"
license = "MIT"
repository = "https://github.com/casoon/typst-business-templates"
keywords = ["typst", "documents", "invoice", "pdf", "cli"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
colored = "2.1"
walkdir = "2.4"
anyhow = "1.0"
dialoguer = "0.11"  # TODO: Make optional or remove (only for prompts)
console = "0.15"    # TODO: Remove with interactive UI
chrono = "0.4"
comfy-table = "7.1" # TODO: Remove with interactive UI
lopdf = "0.39"      # TODO: Remove (use qpdf CLI instead)
dirs = "5.0"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3.8"
